--- a/styles/styles.css
+++ b/styles/styles.css
@@ -250,12 +250,19 @@ html {
   margin: 0 auto;
 }
 
+p {
+  font-family: "Barlow";
+  font-weight: regular;
+  font-size: 2rem;
+}
+
 header {
   background: url(./../the-restaurant-mall-assets/home-header.jpg);
-  height: 100rem;
+  height: clamp(10rem, 60vw, 115rem);
   background-size: contain;
   background-repeat: no-repeat;
   position: relative;
+  background-color: #2B331B;
 }
 
 .upperNav ul {
@@ -294,6 +301,9 @@ h1 {
   color: white;
 }
 h1 p {
+  font-family: "JosefinSans";
+  font-weight: bold;
+  font-size: clamp(1rem, 5vw, 10rem);
   margin: 0;
 }
 h1 span {
@@ -317,4 +327,247 @@ h1 span {
   content: url(../icons/location-dot-solid.svg);
   height: 100px;
   width: 100px;
+}
+
+section {
+  background: #2B331B;
+  color: #FFFFFF;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 90%;
+  padding-left: 0;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+.cards li {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  width: 64rem;
+  margin-block: 2rem;
+}
+.cards h2 {
+  margin-top: 0;
+  font-family: "JosefinSans";
+  font-weight: regular;
+  font-size: 4.5rem;
+  text-transform: uppercase;
+}
+.cards p {
+  font-family: "Barlow";
+  font-weight: regular;
+  font-size: 2rem;
+}
+
+.cardContent {
+  width: 60rem;
+  padding-left: 3rem;
+}
+
+.iconHolder {
+  width: 6rem;
+  height: 6rem;
+  background: #FFD300;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+.iconHolder img {
+  display: block;
+  width: 50%;
+}
+
+.bnS {
+  background: #171B0E;
+}
+
+.content {
+  width: 40%;
+}
+.content h3 {
+  margin-top: 0;
+  font-family: "JosefinSans";
+  font-weight: regular;
+  font-size: 4rem;
+  text-transform: uppercase;
+  padding-block: 1rem;
+  margin: 0;
+}
+.content p {
+  font-family: "Barlow";
+  font-weight: regular;
+  font-size: 2rem;
+  padding-block: 2rem;
+  margin-block: 0;
+  margin-right: 30rem;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-end;
+  flex-wrap: wrap;
+}
+.left p {
+  margin-left: 30rem;
+  margin-right: 0;
+  text-align: right;
+}
+
+.readMore {
+  background: #FFD300;
+  color: #0F0F0F;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 2rem;
+  font-family: "Barlow";
+  font-weight: regular;
+  font-size: 2rem;
+}
+
+.friesWrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.popoutImage {
+  position: relative;
+  width: 40%;
+  height: 50rem;
+}
+
+.leftImage {
+  position: absolute;
+  top: -3rem;
+  box-shadow: 2rem 2rem #FFD300;
+  width: 100%;
+}
+
+.rightImage {
+  position: absolute;
+  bottom: -3rem;
+  right: 0;
+  box-shadow: -2rem 3rem #FFD300;
+  width: 100%;
+}
+
+.tsnWrapper {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.giftCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 40%;
+  padding-block: 10rem;
+}
+.giftCard h3 {
+  font-family: "JosefinSans";
+  font-weight: bold;
+  font-size: 4.5rem;
+  color: #FFD300;
+}
+.giftCard p {
+  font-family: "Barlow";
+  font-weight: normal;
+  font-size: 2rem;
+  padding-block: 2rem;
+}
+
+.findOutMore {
+  color: #FFFFFF;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: "JosefinSans";
+  font-weight: normal;
+  font-size: 2rem;
+  background: #171B0E;
+  padding: 2rem;
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.banner {
+  background: url(../the-restaurant-mall-assets/banner.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 70vh;
+}
+
+.natureSpaces {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding-bottom: 15rem;
+}
+.natureSpaces h3 {
+  color: #FFD300;
+  font-family: "JosefinSans";
+  font-weight: bold;
+  font-size: 4.5rem;
+  text-transform: uppercase;
+  margin-top: 0;
+}
+.natureSpaces img {
+  width: 40rem;
+  height: 40rem;
+  box-shadow: -2rem 2rem #FFD300;
+}
+
+.natureContent {
+  width: 60%;
+  padding-left: 5%;
+}
+
+.gallery {
+  background: #171B0E;
+}
+.gallery ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wap;
+  padding-block: 20rem;
+}
+
+footer {
+  background: #0F0F0F;
+  color: #FFFFFF;
+  text-align: center;
+  margin: 0;
+}
+footer p {
+  margin: 0;
+  padding-block: 2rem;
 }/*# sourceMappingURL=styles.css.map */
