--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -25,14 +25,21 @@ p{
 }
 
 //header styles here
-header{
+.mainImage{
     background: url(./../the-restaurant-mall-assets/home-header.jpg);
     height: clamp(10rem,60vw,115rem);
+}
+
+.coreHeader{
+    
+    
     background-size: contain;
     background-repeat: no-repeat;
     position: relative;//for the hanging image
     background-color: $pine;
 }
+
+
 
 
 //nav is HERE
